--- a/MecanicoConfiable.App.Servicios/Pages/Administracion/Auxiliar/DeleteAuxiliar.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Administracion/Auxiliar/DeleteAuxiliar.cshtml
@@ -4,7 +4,7 @@
 }
 <h1>Borrado de confirmación</h1>
 
-<a class="btn btn-primary" asp-page ="/Administracion/Mechanic/ListMecanicos">Lista</a>
+<a class="btn btn-primary" asp-page ="./ListAuxiliar">Lista</a>
 
 <div class="alet alet-danger">
    <h5>Esta seguro que desea borrar a el/la Auxiliar @Model.Auxiliar.Nombre</h5>
