--- a/MecanicoConfiable.App.Servicios/Pages/Administracion/Auxiliar/EditAuxiliar.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Administracion/Auxiliar/EditAuxiliar.cshtml
@@ -5,7 +5,7 @@
 }
 <h2>Edición Auxiliar  @Model.Auxiliar.Nombre</h2>
 
-<a class="btn btn-primary" asp-page ="/Administracion/Auxiliar/ListAuxiliar">Volver</a>
+<a class="btn btn-primary" asp-page ="./ListAuxiliar">Volver</a>
 
 <form method="post" id = "formuadmin" class="mt-5 mb-3 formuadmin"  >
     <input type = "hidden" asp-for ="Auxiliar.IdAuxiliar"/>
