--- a/MecanicoConfiable.App.Servicios/Pages/Administracion/Auxiliar/ListAuxiliar.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Administracion/Auxiliar/ListAuxiliar.cshtml
@@ -33,7 +33,7 @@
             <!--<td>auxiliar.FechaNacimiento</td>-->
             <td>
               <a class="btn btn-primary table-btn" asp-page="./EditAuxiliar" asp-route-IdAuxiliar = "@auxiliar.IdAuxiliar">Editar</a>
-              <a class="btn btn-primary table-btn" asp-page="./DeleteAuxiliar" asp-route-IdAuxiliar = "@auxiliar.IdAuxiliar">Eliminar</a>
+              <a class="btn btn-danger" asp-page="./DeleteAuxiliar" asp-route-IdAuxiliar = "@auxiliar.IdAuxiliar">Eliminar</a>
               <a class="btn btn-primary table-btn" asp-page="./DetailAuxiliar" asp-route-IdAuxiliar = "@auxiliar.IdAuxiliar">Detalle</a>
 
             </td>
