--- a/MecanicoConfiable.App.Servicios/Pages/Services/Levels/ListNiveles.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Services/Levels/ListNiveles.cshtml
@@ -35,7 +35,7 @@
             <td>@nivel.Placa</td>
             <td>
               <a class="btn btn-primary table-btn" asp-page="./EditNiveles" asp-route-IdNiveles = "@nivel.IdNiveles">Editar</a>
-              <a class="btn btn-primary table-btn" asp-page="./DeleteNiveles" asp-route-IdNiveles = "@nivel.IdNiveles">Eliminar</a>
+              <a class="btn btn-danger" asp-page="./DeleteNiveles" asp-route-IdNiveles = "@nivel.IdNiveles">Eliminar</a>
               <a class="btn btn-primary table-btn" asp-page="./DetailRevision" asp-route-IdNiveles = "@nivel.IdNiveles">Detalle</a>
             </td>
 
