--- a/MecanicoConfiable.App.Servicios/Pages/Services/Parts/ListCambioRepuestos.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Services/Parts/ListCambioRepuestos.cshtml
@@ -26,9 +26,9 @@
             <td>@cambio.IdRepuesto</td>
             <td>@cambio.IdVehiculo</td>
             <td>
-              <a class="btn btn-primary table-btn" asp-page="./EditNiveles" asp-route-IdCambioRepuesto = "@cambio.IdCambioRepuesto">Editar</a>
-              <a class="btn btn-primary table-btn" asp-page="./DeleteNiveles" asp-route-IdCambioRepuesto = "@cambio.IdCambioRepuesto">Eliminar</a>
-              <a class="btn btn-primary table-btn" asp-page="./DetailRevision" asp-route-IdCambioRepuesto = "@cambio.IdCambioRepuesto">Detalle</a>
+              <a class="btn btn-primary table-btn" asp-page="./EditCambioRepuesto" asp-route-IdCambioRepuesto = "@cambio.IdCambioRepuesto">Editar</a>
+              <a class="btn btn-danger" asp-page="./DeleteCambioRepuesto" asp-route-IdCambioRepuesto = "@cambio.IdCambioRepuesto">Eliminar</a>
+
             </td>
 
         </tr>
