--- a/MecanicoConfiable.App.Servicios/Pages/Administracion/Mechanic/ListMecanicos.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Administracion/Mechanic/ListMecanicos.cshtml
@@ -33,7 +33,7 @@
             <td>mecanico.FechaNacimiento</td>-->
             <td>
               <a class="btn btn-primary table-btn" asp-page="./EditMecanico" asp-route-IdMecanico = "@mecanico.IdMecanico">Editar</a>
-              <a class="btn btn-primary table-btn" asp-page="./DeleteMecanico" asp-route-IdMecanico = "@mecanico.IdMecanico">Eliminar</a>
+              <a class="btn btn-danger" asp-page="./DeleteMecanico" asp-route-IdMecanico = "@mecanico.IdMecanico">Eliminar</a>
               <a class="btn btn-primary table-btn" asp-page="./DetailMecanico" asp-route-IdMecanico = "@mecanico.IdMecanico">Detalle</a>
 
             </td>
