--- a/MecanicoConfiable.App.Servicios/Pages/Administracion/Owner/ListDueño.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Administracion/Owner/ListDueño.cshtml
@@ -35,7 +35,7 @@
             
             <td>
               <a class="btn btn-primary table-btn" asp-page="./EditDueño" asp-route-IdDueño = "@dueño.IdDueño">Editar</a>
-              <a class="btn btn-primary table-btn" asp-page="./DeleteDueño" asp-route-IdDueño = "@dueño.IdDueño">Eliminar</a>
+              <a class="btn btn-danger" asp-page="./DeleteDueño" asp-route-IdDueño = "@dueño.IdDueño">Eliminar</a>
               <a class="btn btn-primary table-btn" asp-page="./DetailDueño" asp-route-IdDueño = "@dueño.IdDueño">Detalle</a>
 
             </td>
