--- a/MecanicoConfiable.App.Servicios/Pages/Services/Car/ListVehiculo.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Services/Car/ListVehiculo.cshtml
@@ -37,7 +37,7 @@
             
             <td>
               <a class="btn btn-primary table-btn" asp-page="./EditVehiculo" asp-route-IdVehiculo = "@vehiculo.IdVehiculo">Editar</a>
-              <a class="btn btn-primary table-btn" asp-page="./DeleteVehiculo" asp-route-IdVehiculo = "@vehiculo.IdVehiculo">Eliminar</a>
+              <a class="btn btn-danger" asp-page="./DeleteVehiculo" asp-route-IdVehiculo = "@vehiculo.IdVehiculo">Eliminar</a>
               <a class="btn btn-primary table-btn" asp-page="./DetailVehiculo" asp-route-IdVehiculo = "@vehiculo.IdVehiculo">Detalle</a>
               <a class="btn btn-primary table-btn" asp-page="./AddMecanico" asp-route-Placa = "@vehiculo.Placa">Asignar Mecanico</a>
               <a class="btn btn-primary table-btn" asp-page="./AddSeguro" asp-route-IdVehiculo = "@vehiculo.IdVehiculo">Comprar Seguro</a>
