--- a/MecanicoConfiable.App.Servicios/Pages/Administracion/Mechanic/ListMecanicos.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Administracion/Mechanic/ListMecanicos.cshtml
@@ -7,6 +7,13 @@
 <h1>Mecanicos contratados actualmente</h1>
 
  <a asp-page="/Administracion/Administrador" class="btn-defaoult">Volver</a>
+ <div class="form-group">
+  <form method="get" id = "formuadmin" class="mt-5 mb-3 formuadmin"  >
+        <label asp-for ="filter">Filtro</label></br>
+        <input name="Owner" asp-for = "filter" class="form-control" ></br>
+        <button type="submit" class="btn btn-primary">Filtrar</button>
+  </form>
+</div>
 
 <table class="table mt-5 mb-3">
 
