--- a/MecanicoConfiable.App.Servicios/Pages/Services/Car/ListVehiculo.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Services/Car/ListVehiculo.cshtml
@@ -2,38 +2,35 @@
 @model ListVehiculoModel
 @{
     ViewData["Title"] = "Listadueño";
+    
 }
 
 <h1>  Vehiculos Actualmente</h1>
 <a asp-page="/Services/Services" class="btn-defaoult">Volver</a>
+
+<div class="form-group">
+  <form method="get" id = "formuadmin" class="mt-5 mb-3 formuadmin"  >
+        <label asp-for ="filter">Filtro</label></br>
+        <input name="Pla" asp-for = "filter" class="form-control" ></br>
+        <button type="submit" class="btn btn-primary">Filtrar</button>
+  </form>
+</div>
+
 <table class="table mt-5 mb-3">
 
     <thead>
-      <tr>
-        <!--<th>ID</th>-->
-        <th>Placa</th>
-        <!--<th>Tipo</th>-->
-        <th>Marca</th>
-        <!--<th>Direccion</th>
-        <th>Número de Teléfono</th>
-        <th>Email</th>
-        <th>Ciudad</th>-->
-        
+      <tr>       
+        <th>Placa</th>        
+        <th>Marca</th>        
       </tr>
     </thead>
     @foreach (var vehiculo in Model.Vehiculos)
     {
         <tr>
-            <!--<td>vehiculo.IdVehiculo</td>-->
-            <td>@vehiculo.Placa</td>
-            <!--<td>vehiculo.Tipo</td>-->
+            
+            <td>@vehiculo.Placa</td>            
             <td>@vehiculo.Marca</td>
-            <!--<td>vehiculo.Modelo</td>-->
-            <!--<td>vehiculo.NumeroPasajeros</td>-->
-            <!--<td>vehiculo.PaisOrigen</td>-->
-            <!--<td>vehiculo.DescripcionAdicional</td>-->
-            <!--<td>vehiculo.Dueño</td>
-            <td>vehiculo.Mecanico</td>-->
+            
             
             <td>
               <a class="btn btn-primary table-btn" asp-page="./EditVehiculo" asp-route-IdVehiculo = "@vehiculo.IdVehiculo">Editar</a>
